--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2015", // Specify ECMAScript target version
     "module": "commonjs", // Specify module code generation
-    "outDir": "./dist", // Redirect output structure to the directory
+    "outDir": "./public", // Redirect output structure to the directory
     "rootDir": "./", // Specify the root directory of input files
     "strict": true, // Enable all strict type-checking options
     "esModuleInterop": true, // Enables emit interoperability for CommonJS and ES Modules
